Fixed bug loading preview and size issue on mobile

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -23,13 +23,6 @@ div.timeline-axis-text {
     padding: 3px;
     white-space: nowrap;
 }
-
-div.timeline-axis-text-minor {
-}
-
-div.timeline-axis-text-major {
-}
-
 div.timeline-event {
     color: #1A1A1A;
     border-color: #97B0F8;
@@ -43,11 +36,6 @@ div.timeline-event-selected {
     z-index: 999;
 }
 
-div.timeline-event-cluster {
-    /* TODO: use another color or pattern? */
-    background: #97B0F8 url('img/cluster_bg.png');
-    color: white;
-}
 div.timeline-event-cluster div.timeline-event-dot {
     border-color: #D5DDF6;
 }
@@ -140,30 +128,4 @@ div.timeline-navigation-move-left, div.timeline-navigation-move-right {
 
     width: 16px;
     height: 16px;
-}
-
-div.timeline-navigation-new {
-    background: url('img/16/new.png') no-repeat center;
-}
-
-div.timeline-navigation-delete {
-    padding: 0px;
-    padding-left: 5px;
-    background: url('img/16/delete.png') no-repeat center;
-}
-
-div.timeline-navigation-zoom-in {
-    background: url('img/16/zoomin.png') no-repeat center;
-}
-
-div.timeline-navigation-zoom-out {
-    background: url('img/16/zoomout.png') no-repeat center;
-}
-
-div.timeline-navigation-move-left {
-    background: url('img/16/moveleft.png') no-repeat center;
-}
-
-div.timeline-navigation-move-right {
-    background: url('img/16/moveright.png') no-repeat center;
 }
